--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 APP_NAME="Medical Knowledge RAG"
 APP_VERSION="0.1"
 OPENAI_API_KEY="your_openai_api_key_here"
+FILE_ALLOWED_EXTENSIONS=["text/plain" , "application/pdf"]
+FILE_ALLOWED_MAX_SIZE_MB=10
