--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ APP_VERSION="0.1"
 OPENAI_API_KEY="your_openai_api_key_here"
 FILE_ALLOWED_EXTENSIONS=["text/plain" , "application/pdf"]
 FILE_ALLOWED_MAX_SIZE_MB=10
+PROJECTS_DIR = "assets/projects"
+FILE_DEFAULT_CHUNK_SIZE = 512000 #512KB
+
