--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ httpx == 0.28.1
 python-dotenv == 1.2.1
 pydantic-settings == 2.12.0
 aiofiles == 25.1.0
+langchain == 1.2.4
+PyMuPDF == 1.26.7
+langchain-community == 0.4.1
